src/css/style.scss
/*
rgba(18, 18, 26, 0.8) 
blackbg

rgb(252, 238, 33) 
lightyellow

rgb(203, 32, 45) 
darkred

rgb(247, 171, 27) 
orange

rgb(236, 112, 37)
darkorange

rgb(229, 75, 39) 
darkerorange

rgb(53, 168, 73) 
darkgreen

rgb(8, 91, 167) 
darkblue

rgb(211, 220, 43) 
yellowgreen

rgb(95, 44, 131)
purple

font-family: 'Acme', sans-serif;
*/

@import url('https://fonts.googleapis.com/css?family=Laila');

$break-mobile-sm: 400px;
$break-mobile-lg: 481px;
$break-sm: 576px;
$break-md: 768px;
$break-lg: 992px;
$break-xl: 1200px;
$break-xxl: 1400px;

$slide-bg-color: rgba(18, 18, 26, 0.8);
$source-hover-color: rgb(247, 171, 27);
$tip-color: hotpink;
$tip-bg-color: rgb(18, 18, 26);

$laila: 'Laila', serif;

@mixin mobile-sm {
    @media (max-width: #{$break-mobile-sm}) {
       @content;
   };
};

@mixin mobile-lg {
    @media (min-width: #{$break-mobile-sm}) {
       @content;
   };
};

@mixin ssm {
    @media (min-width: #{$break-mobile-lg}) {
       @content;
   };
};

@mixin sm {
   @media (min-width: #{$break-sm}) {
       @content;
   };
};

@mixin md {
    @media (min-width: #{$break-md}) {
       @content;
   };
};

@mixin lg {
    @media (min-width: #{$break-lg}) {
       @content;
   };
};

@mixin xl {
    @media (min-width: #{$break-xl}) {
       @content;
   };
};

@mixin xxl {
    @media (min-width: #{$break-xl}) {
       @content;
   };
};

html, body {
    min-height: 100%;
    width: 100%;
    font-family: $laila;
    overflow-x: hidden;
    background: #000000;
    background: -webkit-linear-gradient(to left, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to left, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

    .row {
        margin: 0;
    };
};

.cursor-pointer {
    cursor: pointer;
};

/* Testing */
.dashboard-section {
    min-height: 100%;
    width: 100%;
};

.slider-section {
    .tick text{
        fill: white;
        font-family: $laila;
    };
    .parameter-value text {
        fill: rgb(247, 171, 27);
    };
};

.line-section {
    color: white;

    .brush {
        fill: rgba(18, 18, 26, 0.4);
    };

    .ticks-style {
        font-family: $laila;
        font-size: 0.75rem;
    };
};

.tip-style {
    display: inline-block;
    text-align: center;
    border-radius: 10%;
    font-size: 0.8rem;
    padding: 0.3rem;
    background: $tip-bg-color;
    color: $tip-color;
    border: white 1px solid;
};

.chart-source {
    fill: white;
    text-decoration: underline;
    &:hover {
        fill: $source-hover-color;
    };
};

.repo-link {
    font-size: 1.5rem;
    color: white;
    &:hover, &:active, &:focus {
        color: rgb(247, 171, 27);
    }
};

.return-link {
    color: white;
    &:hover, &:active, &:focus {
        color: rgb(247, 171, 27);
    }
}

